[metadata]
name = gridijkstra
version = 0.1.1
author = vegardkv
description = Python package wrapping scipy.sparse.csgraph.dijkstra with a grid-based interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vegardkv/gridijkstra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
